--- a/style.css
+++ b/style.css
@@ -7,64 +7,148 @@
 }
 
 #button {
+
     line-height: 20px;
     position: absolute;
     margin: 10px 10px 0 10px;
     right: 0;
+
 }
 
 body {
+
     font: 14px/2 Georgia, serif;
+
 }
 
 #page-wrap {
     max-width: 500px;
     margin: 1rem auto;
     padding: 1rem;
+
 }
 
 p, ul, h1 {
     margin: 0 0 1rem 0;
+
 }
 
 .textScroll {
     height: 600px;
-    overflow-y: scroll;
+}
+pre {
+    overflow-x: auto;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
 
 .top-container {
-    background-color: #f1f1f1;
-    padding: 30px;
+    box-shadow: 0 5px 50px 0 rgba(2, 0, 0, 0.2);
+    background-color: #1abc9c;
+    padding: 40px;
+    text-align: center;
+
+}
+
+#en {
+    display: none;
+    margin-left: auto;
+
+}
+
+.button_lang {
+    background-color: #444;
+    color: #FFF;
+    padding: 8px 20px;
+    border-radius: 5px;
+
+    -webkit-transition: background-color .3s ease-in-out;
+    -moz-transition: background-color .3s ease-in-out;
+    -o-transition: background-color .3s ease-in-out;
+    -ms-transition: background-color .3s ease-in-out;
+    transition: background-color .3s ease-in-out;
+}
+
+.button_lang:hover, .current_lang {
+    background-color: #777;
+    -webkit-transition: background-color .3s ease-in-out;
+    -moz-transition: background-color .3s ease-in-out;
+    -o-transition: background-color .3s ease-in-out;
+    -ms-transition: background-color .3s ease-in-out;
+    transition: background-color .3s ease-in-out;
+
+}
+
+ul li {
+    width: auto;
+    display: inline;
+
+}
+
+.cardB {
+
+    box-shadow: 1px 5px 10px 1px rgba(5, 0, 0, 0.5);
+    max-width: 300px;
+    margin-left: 5px;
+    text-align: center;
+    font-family: arial;
+    position: relative;
+
+}
+
+.price {
+    color: #1abc9c;
+    font-size: 20px;
+}
+
+.cardB button {
+    border: none;
+    outline: 0;
+    padding: 10px;
+    margin: 15px;
+    color: white;
+    background-color: #1abc9c;
+    text-align: center;
+    cursor: pointer;
+    width: 50%;
+    font-size: 10px;
+}
+
+.cardB button:hover {
+    opacity: 0.7;
+
+}
+
+.header {
+    padding: 60px;
+    text-align: center;
+    background: #1abc9c;
+    color: white;
+    font-size: 30px;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200%;
+    padding: 10px;
+}
+
+.audioPlayer{
     text-align: center;
 }
 
 
 
-#en {
-  display: none;
-}
-
-.button_lang {
-  background-color: #444;
-  color: #FFF;
-  padding: 8px 20px;
-  border-radius: 5px;
-
-  -webkit-transition: background-color .3s ease-in-out;
-  -moz-transition: background-color .3s ease-in-out;
-  -o-transition: background-color .3s ease-in-out;
-  -ms-transition: background-color .3s ease-in-out;
-  transition: background-color .3s ease-in-out;
-}
-.button_lang:hover, .current_lang {
-  background-color: #777;
-  -webkit-transition: background-color .3s ease-in-out;
-  -moz-transition: background-color .3s ease-in-out;
-  -o-transition: background-color .3s ease-in-out;
-  -ms-transition: background-color .3s ease-in-out;
-  transition: background-color .3s ease-in-out;
-}
-ul li {
-  width: auto;
-  display: inline;
+.footer {
+    left: 0;
+    bottom: 0;
+    background-color: #1abc9c;
+    color: white;
+    text-align: center;
+    padding: 80px;
 }
