--- a/style.css
+++ b/style.css
@@ -1,39 +1,11 @@
-.body {
-    background-color: blue;
-}
 
-#test {
-    background-color: red;
-}
-
-#button {
-
-    line-height: 20px;
-    position: absolute;
-    margin: 10px 10px 0 10px;
-    right: 0;
-
-}
-
-body {
-
-    font: 14px/2 Georgia, serif;
-
-}
-
-#page-wrap {
-    max-width: 500px;
-    margin: 1rem auto;
-    padding: 1rem;
-
-}
 
 p, ul, h1 {
     margin: 0 0 1rem 0;
 
 }
 
-.textScroll {
+.divSize {
     height: 600px;
 }
 pre {
@@ -53,35 +25,6 @@ pre {
 
 }
 
-#en {
-    display: none;
-    margin-left: auto;
-
-}
-
-.button_lang {
-    background-color: #444;
-    color: #FFF;
-    padding: 8px 20px;
-    border-radius: 5px;
-
-    -webkit-transition: background-color .3s ease-in-out;
-    -moz-transition: background-color .3s ease-in-out;
-    -o-transition: background-color .3s ease-in-out;
-    -ms-transition: background-color .3s ease-in-out;
-    transition: background-color .3s ease-in-out;
-}
-
-.button_lang:hover, .current_lang {
-    background-color: #777;
-    -webkit-transition: background-color .3s ease-in-out;
-    -moz-transition: background-color .3s ease-in-out;
-    -o-transition: background-color .3s ease-in-out;
-    -ms-transition: background-color .3s ease-in-out;
-    transition: background-color .3s ease-in-out;
-
-}
-
 ul li {
     width: auto;
     display: inline;
@@ -89,14 +32,12 @@ ul li {
 }
 
 .cardB {
-
     box-shadow: 1px 5px 10px 1px rgba(5, 0, 0, 0.5);
     max-width: 300px;
     margin-left: 5px;
     text-align: center;
     font-family: arial;
     position: relative;
-
 }
 
 .price {
@@ -123,7 +64,7 @@ ul li {
 }
 
 .header {
-    padding: 60px;
+    padding: 30px;
     text-align: center;
     background: #1abc9c;
     color: white;
@@ -150,5 +91,5 @@ ul li {
     background-color: #1abc9c;
     color: white;
     text-align: center;
-    padding: 80px;
+    padding: 30px;
 }
