--- a/style.css
+++ b/style.css
@@ -1,11 +1,26 @@
 
+.body {
+    background-color: #333333;
+}
+
+.carousel-content {
+    color:dimgrey;
+    display:flex;
+    align-items:center;
+    height: 250px;
+}
+
+#text-carousel {
+
+    padding: 10px;
+}
 
 p, ul, h1 {
     margin: 0 0 1rem 0;
 
 }
 
-.divSize {
+.resultText {
     height: 600px;
 }
 pre {
@@ -19,7 +34,7 @@ pre {
 
 .top-container {
     box-shadow: 0 5px 50px 0 rgba(2, 0, 0, 0.2);
-    background-color: #1abc9c;
+    background-color:dimgrey;
     padding: 40px;
     text-align: center;
 
@@ -34,14 +49,14 @@ ul li {
 .cardB {
     box-shadow: 1px 5px 10px 1px rgba(5, 0, 0, 0.5);
     max-width: 300px;
-    margin-left: 5px;
+    margin-left: 155px;
     text-align: center;
     font-family: arial;
     position: relative;
 }
 
 .price {
-    color: #1abc9c;
+    color: dimgrey;
     font-size: 20px;
 }
 
@@ -51,7 +66,7 @@ ul li {
     padding: 10px;
     margin: 15px;
     color: white;
-    background-color: #1abc9c;
+    background-color:dimgrey;
     text-align: center;
     cursor: pointer;
     width: 50%;
@@ -66,7 +81,7 @@ ul li {
 .header {
     padding: 30px;
     text-align: center;
-    background: #1abc9c;
+    background: white;
     color: white;
     font-size: 30px;
 }
@@ -86,10 +101,30 @@ ul li {
 
 
 .footer {
-    left: 0;
-    bottom: 0;
-    background-color: #1abc9c;
+
+    background-color:white;
     color: white;
     text-align: center;
     padding: 30px;
 }
+
+#hImage {
+    width: 100%;
+
+    border: 1px solid darkgrey;
+    border-radius: 4px;
+    padding: 0;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#fImage{
+    width: 100%;
+    height: 200px;
+    border: 1px solid darkgrey;
+    border-radius: 4px;
+    padding: 0;
+
+}
+
