--- a/style.css
+++ b/style.css
@@ -1,28 +1,31 @@
-
 .body {
     background-color: #333333;
 }
 
 .carousel-content {
-    color:dimgrey;
-    display:flex;
-    align-items:center;
+    display: flex;
+    align-items: center;
     height: 250px;
 }
 
-#text-carousel {
+.carousel-item.active,
+.carousel-item-next,
+.carousel-item-prev {
+    display: block;
+}
 
+#text-carousel {
     padding: 10px;
 }
 
 p, ul, h1 {
     margin: 0 0 1rem 0;
-
 }
 
 .resultText {
     height: 600px;
 }
+
 pre {
     overflow-x: auto;
     white-space: pre-wrap;
@@ -34,22 +37,20 @@ pre {
 
 .top-container {
     box-shadow: 0 5px 50px 0 rgba(2, 0, 0, 0.2);
-    background-color:dimgrey;
+    background-color: dimgrey;
     padding: 40px;
     text-align: center;
-
 }
 
 ul li {
     width: auto;
     display: inline;
-
 }
 
 .cardB {
     box-shadow: 1px 5px 10px 1px rgba(5, 0, 0, 0.5);
     max-width: 300px;
-    margin-left: 155px;
+    margin-left: 115px;
     text-align: center;
     font-family: arial;
     position: relative;
@@ -66,7 +67,7 @@ ul li {
     padding: 10px;
     margin: 15px;
     color: white;
-    background-color:dimgrey;
+    background-color: dimgrey;
     text-align: center;
     cursor: pointer;
     width: 50%;
@@ -75,7 +76,6 @@ ul li {
 
 .cardB button:hover {
     opacity: 0.7;
-
 }
 
 .header {
@@ -94,37 +94,69 @@ ul li {
     padding: 10px;
 }
 
-.audioPlayer{
+.audioPlayer {
     text-align: center;
 }
 
-
-
 .footer {
 
-    background-color:white;
+    background-color: white;
     color: white;
     text-align: center;
-    padding: 30px;
 }
 
 #hImage {
     width: 100%;
-
-    border: 1px solid darkgrey;
-    border-radius: 4px;
+    height: 200px;
     padding: 0;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
 }
 
-#fImage{
+#fImage {
     width: 100%;
     height: 200px;
     border: 1px solid darkgrey;
     border-radius: 4px;
     padding: 0;
-
 }
 
+.page-header {
+    background-repeat: no-repeat;
+    height: 200px;
+    width: 100%;
+    margin-top: auto;
+}
+
+#container {
+    width: 130px;
+    height: 60px;
+    display: table;
+    background-color: #ccc;
+}
+
+#container .image-container {
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+}
+
+#logo {
+    height: 250px;
+    width: 350px;
+    overflow: hidden;
+    float: central;
+    margin-bottom: auto;
+    margin-top: 40px;
+    margin-left: 115px;
+}
+
+#TextForlogo {
+    margin-left: 75px;
+    margin-top: 50px;
+    font-size: 15px;
+
+}
